ui: fix horizontal scrolling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,6 +37,7 @@
 html {
   scroll-behavior: smooth;
   scrollbar-color: #3f3f46 #09090b;
+  overflow-x: hidden;
 }
 
 body {
